--- a/package.json
+++ b/package.json
@@ -5,12 +5,29 @@
   "main": "index.js",
   "scripts": {
     "build": "tucker build",
-    "start": "tucker run"
+    "start": "tucker run",
+    "docs": "webpack --mode production",
+    "docs:watch": "webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tucker": "^2.0.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "tucker": "^2.0.0",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "emotion": "^9.1.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-katex": "^2.0.1",
+    "react-syntax-highlighter": "^7.0.2"
   }
 }
