--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.20.3",
     "tucker": "^2.0.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
@@ -27,6 +30,7 @@
     "emotion": "^9.1.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-emotion": "^9.1.1",
     "react-katex": "^2.0.1",
     "react-syntax-highlighter": "^7.0.2"
   }
